--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
-  "name": "bolt-app-template",
+  "name": "ticket-refinement",
   "version": "0.0.1",
   "description": "A basic template to spin up a Bolt app for Slack",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "@slack/bolt": "^1.6.0"
   },
-  "engines": {
-    "node": "11.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/bolt-app-template"
-  },
-  "license": "MIT",
-  "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+  "license": "MIT"
 }
